[package]
name = "hyper_async_smol_tcp"
version = "0.1.0"
authors = ["Lattice 0"]
edition = "2021"

[dev-dependencies]
env_logger = "0.8.3"
smoltcp = {git = "https://github.com/smoltcp-rs/smoltcp", rev = "cb1828cbe6d19b10cb50d3e4323fa8c5ca25e5e4"}

[dependencies]
async_smoltcp = {path="./async_smoltcp", features=["vpn", "packet_log"]}
tokio = { version = "1.4.0", features = ["rt-multi-thread", "macros", "net", "io-util", "rt", "time"] }
futures = { version="0.3.13", default-features = false, features = ["std", "executor"] }
log = { version="0.4.14" }
libopenvpn3 = {path="./true_libopenvpn3_rust"}
hyper = {version = "0.14", features = ["full"]}
#TODO take this out
env_logger = "0.8.3"
#etherparse = "0.9.0"

